chore: fix EventCategoryOptValidationHookTest